--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="header-containter">
-            <img class="logo" src="img/logo.png">
+            <img class="logo" src="grill-house/img/logo.png">
             <nav class="nav-header">
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -30,8 +30,8 @@
     </header>
     <main>
         <div id="slider">
-            <img class="slide-left" src="img/pic-1.png">
-            <img class="slide-right" src="img/pic-2.png">
+            <img class="slide-left" src="grill-house/img/pic-1.png">
+            <img class="slide-right" src="grill-house/img/pic-2.png">
             <div class="slide active" data-num="0">
                 <table class="slide-content yellow">
                     <tr>
@@ -75,14 +75,14 @@
         </div>
         <div class="clear"></div>
         <div id="fixed">
-            <img src="img/up-arrow.png"><br>
+            <img src="grill-house/img/up-arrow.png"><br>
             <span>TOP</span>
         </div>
         <div id="menu">
             <h2>Menu</h2>
             <div class="menu-content">
                 <div class="menu-left">
-                    <img src="img/menu-1.png">
+                    <img src="grill-house/img/menu-1.png">
                     <table class="yellow">
                         <tr>
                             <th colspan="2">Chicken</th>
@@ -119,7 +119,7 @@
                     </table>
                 </div>
                 <div class="menu-middle">
-                    <img class="menu-middle-img" src="img/menu-2.png">
+                    <img class="menu-middle-img" src="grill-house/img/menu-2.png">
                     <table class="yellow">
                         <tr>
                             <th colspan="2">Beef</th>
@@ -156,7 +156,7 @@
                     </table>
                 </div>
                 <div class="menu-right">
-                    <img src="img/menu-3.png">
+                    <img src="grill-house/img/menu-3.png">
                     <table class="yellow">
                         <tr>
                             <th colspan="2">Pork</th>
@@ -196,12 +196,12 @@
         </div>
         <div class="clear"></div>
         <div id="promotions">
-            <img src="img/pic-3.png">
+            <img src="grill-house/img/pic-3.png">
             <div class="promo">
                 <p>Get a <br><strong>25% discount</strong><br> on your next dinner</p>
                 <button href="#">Read More</button>
                 <br>
-                <img class="logo" src="img/logo.png">
+                <img class="logo" src="grill-house/img/logo.png">
                 <h4 class="title">The Meat Experience</h4>
             </div>
         </div>
@@ -217,13 +217,13 @@
             </table>
             <p>A special cut of beef ribeye with a bone resembling a single-handed axe and tender meat, that will melt
                 both your heart and in your mouth!</p>
-            <img class="img-1" src="img/pic-1.png">
-            <img class="img-2" src="img/pic-4.png">
-            <img class="img-3" src="img/pic-5.png">
+            <img class="img-1" src="grill-house/img/pic-1.png">
+            <img class="img-2" src="grill-house/img/pic-4.png">
+            <img class="img-3" src="grill-house/img/pic-5.png">
         </div>
         <div class="clear specials"></div>
         <div id="method">
-            <img src="img/pic-6.png">
+            <img src="grill-house/img/pic-6.png">
             <table class="yellow">
                 <tr>
                     <th>Our Method</th>
@@ -245,12 +245,12 @@
                 </tr>
             </table>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-            <img src="img/pic-7.png">
+            <img src="grill-house/img/pic-7.png">
         </div>
         <div class="clear"></div>
     </main>
     <footer>
-        <img class="logo" src="img/logo.png">
+        <img class="logo" src="grill-house/img/logo.png">
         <h4 class="title">-The Meat Experience-</h4>
         <div class="container">
             <table class="yellow">
