--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <header>
         <div class="header-containter">
             <img class="logo" src="img/logo.png">
+            <div class="nav-toggle"><img src="img/nav-open.png"></div>
             <nav class="nav-header">
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -223,7 +224,6 @@
         </div>
         <div class="clear specials"></div>
         <div id="method">
-            <img src="img/pic-6.png">
             <table class="yellow">
                 <tr>
                     <th>Our Method</th>
@@ -233,6 +233,7 @@
                         sed quia non numquam.</td>
                 </tr>
             </table>
+            <img src="img/pic-6.png">
         </div>
         <div class="clear"></div>
         <div id="events">
